# ICP_Jackpot

./: Cargo.toml  README.md
app/lottery-frontend/: .env  index.html  package.json  pnpm-lock.yaml
app/lottery-frontend/src/: App.css  App.tsx
src/: lib.rs
